--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2026.01.15:
+* new: .github/workflows: `enable_yaml_print_all` action input variable
+
 2024.05.26:
 * changed: .github/workflows: reduced GitHub pipeline schedule periods to reduce GitHub limit rate consumption
 
